--- a/angular.json
+++ b/angular.json
@@ -25,12 +25,15 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/typed.js/dist/typed.cjs",
-              "./node_modules/typed.js/dist/typed.umd.js"
+              "./node_modules/typed.js/dist/typed.umd.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
